# llm-inference-optimization-lab

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  requirements.txt
.github/workflows/: clang.yml  gcc.yml  python.yml
benchmarks/: README.md  __init__.py  analyze_baseline.py  analyze_cpu_profiling.py  analyze_kv_cache.py  analyze_phase8_optimization.py  analyze_prefill_decode.py  analyze_quantization.py  analyze_quantization_quality.py  analyze_serving_results.py  generate_serving_workload.py  plot_serving_results.py  run_cpu_profiling.py  run_llama_bench.py  run_phase8_paired.py  run_quantization_quality.py  run_serving_matrix.py  run_serving_simulation.py  serving_common.py
benchmarks/serving/workloads/: burst.jsonl  burst.manifest.json  chat.jsonl  chat.manifest.json  coding_agent.jsonl  coding_agent.manifest.json  mixed_low.jsonl  mixed_low.manifest.json  mixed_medium.jsonl  mixed_medium.manifest.json  mixed_overload.jsonl  mixed_overload.manifest.json  overload.jsonl  overload.manifest.json  shared_system_prompt.jsonl  shared_system_prompt.manifest.json
config/: README.md
configs/: baseline_smoke.yaml  cpu_baseline.example.yaml  cpu_baseline_q4.yaml  cpu_profiling.yaml  fake_integration_smoke.yaml  kv_cache_context_scaling.yaml  kv_cache_context_smoke.yaml  prefill_decode_scaling.yaml  quantization_comparison.yaml  quantization_quality.yaml  quantization_smoke.yaml
configs/models/: quantization_models.yaml
configs/serving/: block_size_16.json  block_size_32.json  block_size_8.json  coding_agent_prefix_off.json  coding_agent_prefix_on.json  continuous_chat_small.json  decode_first.json  fcfs_chat_continuous.json  fcfs_chat_small.json  fcfs_mixed.json  fcfs_overload.json  kv_large.json  kv_medium.json  kv_small.json  matrix_extended.json  matrix_small.json  mixed_low_load.json  mixed_medium_load.json  mixed_overload.json  mixed_overload_fcfs_mixed.json  mixed_prefix_cache_off.json  mixed_prefix_cache_on.json  overload_decode_first.json  shared_prefix_cache_off.json  shared_prefix_cache_on.json  single_active_fcfs_mixed.json
configs/serving/workloads/: burst.json  chat.json  coding_agent.json  mixed_low.json  mixed_medium.json  mixed_overload.json  overload.json  shared_system_prompt.json
docs/: README.md  benchmarking.md  dependencies.md  final_report.md  llama_cpp_build.md  model_setup.md  profiling_environment.md
docs/results/: cpu_baseline_q4.md  cpu_profiling.md  kv_cache_context_scaling.md  phase8b_target_selection.md  phase8c_integration_provenance.md  phase8c_q8_rn2_scale.md  phase8d_binary_provenance.md  phase8d_q8_end_to_end_ab.md  prefill_decode_scaling.md  q4_hotpath_optimization.md  q4_kernel_disassembly.md  quantization_comparison.md
docs/serving/: architecture.md  continuous_batching.md  development_plan.md  engine_comparison.md  final_report.md  interview_notes.md  kv_cache.md  metrics.md  prefix_cache.md  prefix_cache_comparison.md  scheduler.md  simulator.md  workload_schema.md  workloads.md
include/serving/: backend.h  checked_math.h  continuous_batching.h  event.h  fcfs_scheduler.h  kv_cache.h  request.h  scheduler.h  simulated_backend.h  simulation_clock.h  simulation_engine.h
kernels/q4_hotpath/: README.md  q6_q8.h
kernels/q4_hotpath/baseline/: q6_q8_baseline.cpp
kernels/q4_hotpath/benchmark/: bench_q6_q8.cpp
kernels/q4_hotpath/optimized/: q6_q8_optimized.cpp
kernels/q4_hotpath/reference/: q6_q8_reference.cpp
kernels/q4_hotpath/tests/: test_q6_q8.cpp
kernels/q8_rn2_scale/: q8_rn2_scale.cpp  q8_rn2_scale.h
kernels/q8_rn2_scale/benchmark/: bench_q8_rn2_scale.cpp
kernels/q8_rn2_scale/tests/: test_q8_rn2_scale.cpp
patches/: phase8c-q8-rn2-scale-preparation.patch
results/: README.md
results/serving/: command_manifest.json  extended_command_manifest.json  report.md  summary.csv  summary.json
results/serving/raw/: block_size_16.jsonl  block_size_32.jsonl  block_size_8.jsonl  coding_agent_prefix_off.jsonl  coding_agent_prefix_on.jsonl  continuous_chat_small.jsonl  decode_first.jsonl  fcfs_chat_continuous.jsonl  fcfs_chat_small.jsonl  fcfs_mixed.jsonl  fcfs_overload.jsonl  kv_large.jsonl  kv_medium.jsonl  kv_small.jsonl  mixed_low_load.jsonl  mixed_medium_load.jsonl  mixed_overload.jsonl  mixed_overload_fcfs_mixed.jsonl  mixed_prefix_cache_off.jsonl  mixed_prefix_cache_on.jsonl  overload_decode_first.jsonl  shared_prefix_cache_off.jsonl  shared_prefix_cache_on.jsonl  single_active_fcfs_mixed.jsonl
scripts/: download_model.py  probe_perf_events.py  run_serving_demo.sh  verify_llama_cpp_build.py  verify_serving_project.sh
src/: native_smoke.cpp
src/serving/: continuous_batching.cpp  continuous_batching_smoke.cpp  fcfs_scheduler.cpp  kv_cache.cpp  prefix_cache_smoke.cpp  request.cpp  serving_benchmark_runner.cpp  serving_sim_smoke.cpp  simulated_backend.cpp  simulation_engine.cpp
tests/fixtures/: fake_llama_bench.py  llama_bench_malformed.txt  llama_bench_success.txt
tests/python/: test_analyze_baseline.py  test_analyze_prefill_decode.py  test_download_model.py  test_llama_bench.py  test_llama_bench_durability.py  test_phase5_quantization.py  test_phase6_kv_cache.py  test_phase7_cpu_profiling.py  test_phase8_optimization.py  test_serving_documentation.py  test_serving_metrics.py  test_serving_runner.py  test_serving_workloads.py  test_smoke.py  test_verify_llama_cpp_build.py
tests/serving/: test_continuous_batching.cpp  test_kv_cache.cpp  test_prefix_cache.cpp  test_prefix_cache_fix_c.cpp  test_scheduler.cpp  test_simulator.cpp
